[gd_scene load_steps=6 format=3 uid="uid://2h8ff4wg8e3n"]

[ext_resource type="Script" uid="uid://ujpd00tfx6mw" path="res://Scripts/Player_Movement.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://dpsh054vpo5jn" path="res://Assets/Player.png" id="2_gntrk"]
[ext_resource type="PackedScene" uid="uid://bocolb7gf1v30" path="res://Scenes/particles.tscn" id="3_gntrk"]
[ext_resource type="PackedScene" uid="uid://b7csmjs1xqfvk" path="res://Scenes/particlesSide.tscn" id="4_dewec"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dewec"]
radius = 61.0
height = 220.0

[node name="RigidBody2D" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_kyqiw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
rotation = 1.5707964
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gntrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_dewec")

[node name="ParticlesMain" parent="." instance=ExtResource("3_gntrk")]
position = Vector2(-58, 2)
rotation = 1.5707964

[node name="ParticlesRight" parent="." instance=ExtResource("4_dewec")]
position = Vector2(-17, 41)
rotation = 1.3089969

[node name="ParticlesLeft" parent="." instance=ExtResource("4_dewec")]
position = Vector2(-22.000002, -43)
rotation = 1.8325957
